# ASAP_Project

./: CMakeLists.txt  package.xml  rosplan_installation.txt
domains/: domain1.pddl  domain2.pddl
launch/: gazebo_world.launch  rosplan_planning.launch  rosplan_planning_and_action.launch
problems/: problem1.pddl  problem2.pddl
scripts/: execute.sh  move_robot.py  plan.txt  test_move_robot.py
worlds/: grid.yaml  gridworld.sdf
